--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "husky": "^4.3.0",
     "postcss": "^7.0.35",
-    "postcss-import": "^12.0.1"
+    "postcss-import": "^12.0.1",
+    "webpack-bundle-analyzer": "^4.4.0"
   }
 }
