Install `arg` for handling arguments in the terminal

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "arg": "^5.0.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
