--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^4.3.0",
     "postcss": "^7.0.35",
     "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.3",
     "webpack-bundle-analyzer": "^4.4.0"
   }
 }
