--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "highlight.js": "^10.7.2",
     "lodash": "^4.17.21",
+    "simple-icons": "^4.21.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
