--- a/package.json
+++ b/package.json
@@ -9,32 +9,33 @@
   },
   "dependencies": {
     "arg": "^5.0.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.3",
     "highlight.js": "^10.7.2",
     "lodash": "^4.17.21",
     "simple-icons": "^4.21.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.13.14",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-plugin-router": "^4.5.12",
-    "@vue/cli-plugin-vuex": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "autoprefixer": "^9.8.6",
-    "eslint": "^6.7.2",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "^5.0.0-beta.2",
+    "@vue/cli-plugin-eslint": "^5.0.0-beta.2",
+    "@vue/cli-plugin-router": "^5.0.0-beta.2",
+    "@vue/cli-plugin-vuex": "^5.0.0-beta.2",
+    "@vue/cli-service": "^5.0.0-beta.2",
+    "@vue/compiler-sfc": "^3.0.4",
+    "@vue/eslint-config-airbnb": "^5.3.0",
+    "autoprefixer": "^10.3.0",
+    "eslint": "^7.26.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue": "^7.2.0",
     "husky": "^4.3.0",
-    "postcss": "^7.0.35",
+    "postcss": "^8.3.5",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
+    "tailwindcss": "^2.2.4",
     "webpack-bundle-analyzer": "^4.4.0"
   }
 }
