--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -32,7 +33,8 @@
     "eslint": "^7.26.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.2.0",
-    "husky": "^4.3.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
     "postcss": "^8.3.5",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
