--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/core": "^7.14.6",
+    "@types/lodash": "^4.14.171",
+    "@types/simple-icons": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "@vue/cli-plugin-babel": "^5.0.0-beta.2",
     "@vue/cli-plugin-eslint": "^5.0.0-beta.2",
     "@vue/cli-plugin-router": "^5.0.0-beta.2",
+    "@vue/cli-plugin-typescript": "^5.0.0-beta.2",
     "@vue/cli-plugin-vuex": "^5.0.0-beta.2",
     "@vue/cli-service": "^5.0.0-beta.2",
     "@vue/compiler-sfc": "^3.0.4",
     "@vue/eslint-config-airbnb": "^5.3.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^10.3.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "^2.20.2",
@@ -39,6 +44,7 @@
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
     "tailwindcss": "^2.2.4",
+    "typescript": "~4.1.5",
     "webpack-bundle-analyzer": "^4.4.0"
   }
 }
