--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "simple-icons": "^5.7.0",
     "vue": "^3.0.4",
     "vue-router": "^4.0.3",
+    "vue3-keypress": "^4.0.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
