--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "lodash": "^4.17.21",
     "seeelaye": "^0.0.2-alpha.1",
     "simple-icons": "^5.7.0",
-    "vue": "^3.0.4",
-    "vue-router": "^4.0.3",
+    "vue": "^3.2.2",
+    "vue-router": "^4.0.11",
     "vue3-keypress": "^4.0.1",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -25,13 +25,13 @@
     "@types/simple-icons": "^5.8.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
-    "@vue/cli-plugin-babel": "^5.0.0-beta.2",
-    "@vue/cli-plugin-eslint": "^5.0.0-beta.2",
-    "@vue/cli-plugin-router": "^5.0.0-beta.2",
-    "@vue/cli-plugin-typescript": "^5.0.0-beta.2",
-    "@vue/cli-plugin-vuex": "^5.0.0-beta.2",
-    "@vue/cli-service": "^5.0.0-beta.2",
-    "@vue/compiler-sfc": "^3.0.4",
+    "@vue/cli-plugin-babel": "~5.0.0-beta.3",
+    "@vue/cli-plugin-eslint": "~5.0.0-beta.3",
+    "@vue/cli-plugin-router": "~5.0.0-beta.3",
+    "@vue/cli-plugin-typescript": "~5.0.0-beta.3",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
+    "@vue/cli-service": "~5.0.0-beta.3",
+    "@vue/compiler-sfc": "^3.2.2",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^10.3.0",
