--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "postcss-nested": "^4.2.3",
     "tailwindcss": "^2.2.4",
     "tailwindcss-padding-safe": "^1.0.5",
-    "typescript": "~4.1.5",
+    "typescript": "^4.4.2",
     "webpack-bundle-analyzer": "^4.4.0"
   }
 }
